@@ -1,3 +1,9 @@
+2004-03-29  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* mingwex/math/round.c: Rewrite.
+	* mingwex/math/roundf.c: Rewrite.
+	* mingwex/math/roundl.c: Rewrite.
+
 2004-03-25  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/_mingw.h (__MSVCRT_VERSION__): Define default as 0x0600.
